--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,5 +1,8 @@
 $small: 426px;
 
+@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Silkscreen:wght@400;700&display=swap');
+
 .home {
   .feature-card {
     position: relative;
